--- a/index.html
+++ b/index.html
@@ -30,15 +30,14 @@
             <button class="btn btn-outline-primary btn-lg" id="next" data-id>Siguiente</button>
     </div>
     <div class="row" id="characters"></div>
-    <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-    Launch demo modal
-  </button>
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+
+  <!--Modal-->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" 
+   aria-hidden="true">
     <div class="modal-dialog">
-      <div class="modal-content bg-dark border rounded-3">
+      <div class="modal-content bg-dark ">
         <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+          <h5 class="modal-title " id="exampleModalLabel">Modal title</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
